# Haskell-Project

assignment2-master-haskell/assignment2-master/: .gitignore  assignment2.cabal  fun.c
assignment2-master-haskell/assignment2-master/CalgaryCorpus/: bib.huff  book1.huff  book2.huff  halting  halting.huff  news.huff  paper1.huff  paper2.huff  progc.huff  progl.huff  progp.huff
assignment2-master-haskell/assignment2-master/src/: BWT.hs  CodeTable.hs  Coding.hs  Frequency.hs  Huffman.hs  LZW.hs  MTF.hs  Main.hs  MakeTree.hs  RLE.hs  TernaryTree.hs  Types.hs
assignment3-master-haskell/assignment3-master/: Main.hs  Sudoku.hs
