name:                 COMP1100-compression-assignment
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Tony Hosking
maintainer:           antony.hosking@anu.edu.au
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable COMP1100-compression-assignment
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, containers, binary, bytestring, QuickCheck
  hs-source-dirs:       src
  default-language:     Haskell2010
